# cppnet

./: .gitignore  CMakeLists.txt  README.md
ex/: main.cc  test.cc  xor.cc
include/: ForwardLayer.h  InputLayer.h  Layer.h  Net.h  NetConf.h  OutputLayer.h  RecurrentLayer.h  StreamLayer.h  TrainData.h  TrainExample.h
include/exceptions/: CppNetException.h  EndOfDataException.h
src/: ForwardLayer.cc  InputLayer.cc  Net.cc  OutputLayer.cc  RecurrentLayer.cc
